sqlsyntax.output
Grammar

    0 $accept: tucansql $end

    1 tucansql: sql_commands

    2 sql_commands: sql_command
    3             | sql_commands ';' sql_command

    4 sql_command: CREATE TABLE IDENTIFIER '(' sql_column_definition_list ')'
    5            | INSERT INTO IDENTIFIER sql_insert_column_name_list_opt VALUES '(' sql_expression_list ')'
    6            | UPDATE IDENTIFIER SET sql_column_assign_list sql_where_clause_opt
    7            | DROP TABLE IDENTIFIER
    8            | DELETE_ FROM IDENTIFIER sql_where_clause_opt
    9            | SELECT sql_select_expression_list
   10            | SELECT sql_select_expression_list_or_star FROM IDENTIFIER sql_where_clause_opt

   11 sql_select_expression_list_or_star: '*'
   12                                   | sql_select_expression_list

   13 sql_select_expression_list: sql_select_expression
   14                           | sql_select_expression_list ',' sql_select_expression

   15 sql_select_expression: sql_expression
   16                      | sql_expression AS IDENTIFIER
   17                      | sql_expression AS NAME

   18 sql_column_definition_list: sql_column_definition
   19                           | sql_column_definition_list ',' sql_column_definition

   20 sql_column_definition: IDENTIFIER sql_column_type

   21 sql_column_type: BOOLEAN_
   22                | INTEGER
   23                | DECIMAL
   24                | DATETIME
   25                | TEXT
   26                | BINARY

   27 sql_insert_column_name_list_opt: /* empty */
   28                                | '(' sql_column_name_list ')'

   29 sql_column_name_list: IDENTIFIER
   30                     | sql_column_name_list ',' IDENTIFIER

   31 sql_column_assign_list: sql_column_assign
   32                       | sql_column_assign_list ',' sql_column_assign

   33 sql_column_assign: IDENTIFIER '=' sql_expression

   34 sql_where_clause_opt: /* empty */
   35                     | sql_where_clause

   36 sql_where_clause: WHERE sql_expression

   37 sql_expression_list: sql_expression
   38                    | sql_expression_list ',' sql_expression

   39 sql_expression: sql_or_expression

   40 sql_or_expression: sql_and_expression
   41                  | sql_or_expression OR sql_and_expression

   42 sql_and_expression: sql_relational_expression
   43                   | sql_relational_expression AND sql_relational_expression

   44 sql_relational_expression: sql_add_expression
   45                          | sql_relational_expression '=' sql_add_expression
   46                          | sql_relational_expression NE sql_add_expression
   47                          | sql_relational_expression '<' sql_add_expression
   48                          | sql_relational_expression LE sql_add_expression
   49                          | sql_relational_expression '>' sql_add_expression
   50                          | sql_relational_expression GE sql_add_expression
   51                          | sql_relational_expression IS NULL_
   52                          | sql_relational_expression IS NOT NULL_

   53 sql_add_expression: sql_mult_expression
   54                   | sql_add_expression '+' sql_mult_expression
   55                   | sql_add_expression '-' sql_mult_expression

   56 sql_mult_expression: sql_unary_expression
   57                    | sql_mult_expression '*' sql_unary_expression
   58                    | sql_mult_expression '/' sql_unary_expression

   59 sql_unary_expression: sql_primary_expression
   60                     | '+' sql_primary_expression
   61                     | '-' sql_primary_expression
   62                     | NOT sql_primary_expression

   63 sql_primary_expression: sql_literal
   64                       | sql_identifier
   65                       | '(' sql_expression ')'

   66 sql_literal: BOOLEAN_LITERAL
   67            | INTEGER_LITERAL
   68            | DECIMAL_LITERAL
   69            | DATETIME_LITERAL
   70            | TEXT_LITERAL
   71            | BINARY_LITERAL
   72            | NULL_

   73 sql_identifier: IDENTIFIER
   74               | IDENTIFIER '.' IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
'(' (40) 4 5 28 65
')' (41) 4 5 28 65
'*' (42) 11 57
'+' (43) 54 60
',' (44) 14 19 30 32 38
'-' (45) 55 61
'.' (46) 74
'/' (47) 58
';' (59) 3
'<' (60) 47
'=' (61) 33 45
'>' (62) 49
error (256)
BOOLEAN_ (258) 21
INTEGER (259) 22
DECIMAL (260) 23
DATETIME (261) 24
TEXT (262) 25
BINARY (263) 26
CREATE (264) 4
DROP (265) 7
DELETE_ (266) 8
TABLE (267) 4 7
INSERT (268) 5
INTO (269) 5
VALUES (270) 5
UPDATE (271) 6
SET (272) 6
WHERE (273) 36
SELECT (274) 9 10
FROM (275) 8 10
NOT (276) 52 62
NULL_ (277) 51 52 72
OR (278) 41
AND (279) 43
AS (280) 16 17
IS (281) 51 52
IDENTIFIER (282) 4 5 6 7 8 10 16 20 29 30 33 73 74
NAME (283) 17
BOOLEAN_LITERAL (284) 66
INTEGER_LITERAL (285) 67
DECIMAL_LITERAL (286) 68
DATETIME_LITERAL (287) 69
TEXT_LITERAL (288) 70
BINARY_LITERAL (289) 71
NE (290) 46
LE (291) 48
GE (292) 50
SQL_UMINUS (293)


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
tucansql (52)
    on left: 1, on right: 0
sql_commands (53)
    on left: 2 3, on right: 1 3
sql_command (54)
    on left: 4 5 6 7 8 9 10, on right: 2 3
sql_select_expression_list_or_star (55)
    on left: 11 12, on right: 10
sql_select_expression_list (56)
    on left: 13 14, on right: 9 12 14
sql_select_expression (57)
    on left: 15 16 17, on right: 13 14
sql_column_definition_list (58)
    on left: 18 19, on right: 4 19
sql_column_definition (59)
    on left: 20, on right: 18 19
sql_column_type (60)
    on left: 21 22 23 24 25 26, on right: 20
sql_insert_column_name_list_opt (61)
    on left: 27 28, on right: 5
sql_column_name_list (62)
    on left: 29 30, on right: 28 30
sql_column_assign_list (63)
    on left: 31 32, on right: 6 32
sql_column_assign (64)
    on left: 33, on right: 31 32
sql_where_clause_opt (65)
    on left: 34 35, on right: 6 8 10
sql_where_clause (66)
    on left: 36, on right: 35
sql_expression_list (67)
    on left: 37 38, on right: 5 38
sql_expression (68)
    on left: 39, on right: 15 16 17 33 36 37 38 65
sql_or_expression (69)
    on left: 40 41, on right: 39 41
sql_and_expression (70)
    on left: 42 43, on right: 40 41
sql_relational_expression (71)
    on left: 44 45 46 47 48 49 50 51 52, on right: 42 43 45 46 47 48
    49 50 51 52
sql_add_expression (72)
    on left: 53 54 55, on right: 44 45 46 47 48 49 50 54 55
sql_mult_expression (73)
    on left: 56 57 58, on right: 53 54 55 57 58
sql_unary_expression (74)
    on left: 59 60 61 62, on right: 56 57 58
sql_primary_expression (75)
    on left: 63 64 65, on right: 59 60 61 62
sql_literal (76)
    on left: 66 67 68 69 70 71 72, on right: 63
sql_identifier (77)
    on left: 73 74, on right: 64


state 0

    0 $accept: . tucansql $end

    CREATE   shift, and go to state 1
    DROP     shift, and go to state 2
    DELETE_  shift, and go to state 3
    INSERT   shift, and go to state 4
    UPDATE   shift, and go to state 5
    SELECT   shift, and go to state 6

    tucansql      go to state 7
    sql_commands  go to state 8
    sql_command   go to state 9


state 1

    4 sql_command: CREATE . TABLE IDENTIFIER '(' sql_column_definition_list ')'

    TABLE  shift, and go to state 10


state 2

    7 sql_command: DROP . TABLE IDENTIFIER

    TABLE  shift, and go to state 11


state 3

    8 sql_command: DELETE_ . FROM IDENTIFIER sql_where_clause_opt

    FROM  shift, and go to state 12


state 4

    5 sql_command: INSERT . INTO IDENTIFIER sql_insert_column_name_list_opt VALUES '(' sql_expression_list ')'

    INTO  shift, and go to state 13


state 5

    6 sql_command: UPDATE . IDENTIFIER SET sql_column_assign_list sql_where_clause_opt

    IDENTIFIER  shift, and go to state 14


state 6

    9 sql_command: SELECT . sql_select_expression_list
   10            | SELECT . sql_select_expression_list_or_star FROM IDENTIFIER sql_where_clause_opt

    NOT               shift, and go to state 15
    NULL_             shift, and go to state 16
    IDENTIFIER        shift, and go to state 17
    BOOLEAN_LITERAL   shift, and go to state 18
    INTEGER_LITERAL   shift, and go to state 19
    DECIMAL_LITERAL   shift, and go to state 20
    DATETIME_LITERAL  shift, and go to state 21
    TEXT_LITERAL      shift, and go to state 22
    BINARY_LITERAL    shift, and go to state 23
    '('               shift, and go to state 24
    '-'               shift, and go to state 25
    '+'               shift, and go to state 26
    '*'               shift, and go to state 27

    sql_select_expression_list_or_star  go to state 28
    sql_select_expression_list          go to state 29
    sql_select_expression               go to state 30
    sql_expression                      go to state 31
    sql_or_expression                   go to state 32
    sql_and_expression                  go to state 33
    sql_relational_expression           go to state 34
    sql_add_expression                  go to state 35
    sql_mult_expression                 go to state 36
    sql_unary_expression                go to state 37
    sql_primary_expression              go to state 38
    sql_literal                         go to state 39
    sql_identifier                      go to state 40


state 7

    0 $accept: tucansql . $end

    $end  shift, and go to state 41


state 8

    1 tucansql: sql_commands .
    3 sql_commands: sql_commands . ';' sql_command

    ';'  shift, and go to state 42

    $default  reduce using rule 1 (tucansql)


state 9

    2 sql_commands: sql_command .

    $default  reduce using rule 2 (sql_commands)


state 10

    4 sql_command: CREATE TABLE . IDENTIFIER '(' sql_column_definition_list ')'

    IDENTIFIER  shift, and go to state 43


state 11

    7 sql_command: DROP TABLE . IDENTIFIER

    IDENTIFIER  shift, and go to state 44


state 12

    8 sql_command: DELETE_ FROM . IDENTIFIER sql_where_clause_opt

    IDENTIFIER  shift, and go to state 45


state 13

    5 sql_command: INSERT INTO . IDENTIFIER sql_insert_column_name_list_opt VALUES '(' sql_expression_list ')'

    IDENTIFIER  shift, and go to state 46


state 14

    6 sql_command: UPDATE IDENTIFIER . SET sql_column_assign_list sql_where_clause_opt

    SET  shift, and go to state 47


state 15

   62 sql_unary_expression: NOT . sql_primary_expression

    NULL_             shift, and go to state 16
    IDENTIFIER        shift, and go to state 17
    BOOLEAN_LITERAL   shift, and go to state 18
    INTEGER_LITERAL   shift, and go to state 19
    DECIMAL_LITERAL   shift, and go to state 20
    DATETIME_LITERAL  shift, and go to state 21
    TEXT_LITERAL      shift, and go to state 22
    BINARY_LITERAL    shift, and go to state 23
    '('               shift, and go to state 24

    sql_primary_expression  go to state 48
    sql_literal             go to state 39
    sql_identifier          go to state 40


state 16

   72 sql_literal: NULL_ .

    $default  reduce using rule 72 (sql_literal)


state 17

   73 sql_identifier: IDENTIFIER .
   74               | IDENTIFIER . '.' IDENTIFIER

    '.'  shift, and go to state 49

    $default  reduce using rule 73 (sql_identifier)


state 18

   66 sql_literal: BOOLEAN_LITERAL .

    $default  reduce using rule 66 (sql_literal)


state 19

   67 sql_literal: INTEGER_LITERAL .

    $default  reduce using rule 67 (sql_literal)


state 20

   68 sql_literal: DECIMAL_LITERAL .

    $default  reduce using rule 68 (sql_literal)


state 21

   69 sql_literal: DATETIME_LITERAL .

    $default  reduce using rule 69 (sql_literal)


state 22

   70 sql_literal: TEXT_LITERAL .

    $default  reduce using rule 70 (sql_literal)


state 23

   71 sql_literal: BINARY_LITERAL .

    $default  reduce using rule 71 (sql_literal)


state 24

   65 sql_primary_expression: '(' . sql_expression ')'

    NOT               shift, and go to state 15
    NULL_             shift, and go to state 16
    IDENTIFIER        shift, and go to state 17
    BOOLEAN_LITERAL   shift, and go to state 18
    INTEGER_LITERAL   shift, and go to state 19
    DECIMAL_LITERAL   shift, and go to state 20
    DATETIME_LITERAL  shift, and go to state 21
    TEXT_LITERAL      shift, and go to state 22
    BINARY_LITERAL    shift, and go to state 23
    '('               shift, and go to state 24
    '-'               shift, and go to state 25
    '+'               shift, and go to state 26

    sql_expression             go to state 50
    sql_or_expression          go to state 32
    sql_and_expression         go to state 33
    sql_relational_expression  go to state 34
    sql_add_expression         go to state 35
    sql_mult_expression        go to state 36
    sql_unary_expression       go to state 37
    sql_primary_expression     go to state 38
    sql_literal                go to state 39
    sql_identifier             go to state 40


state 25

   61 sql_unary_expression: '-' . sql_primary_expression

    NULL_             shift, and go to state 16
    IDENTIFIER        shift, and go to state 17
    BOOLEAN_LITERAL   shift, and go to state 18
    INTEGER_LITERAL   shift, and go to state 19
    DECIMAL_LITERAL   shift, and go to state 20
    DATETIME_LITERAL  shift, and go to state 21
    TEXT_LITERAL      shift, and go to state 22
    BINARY_LITERAL    shift, and go to state 23
    '('               shift, and go to state 24

    sql_primary_expression  go to state 51
    sql_literal             go to state 39
    sql_identifier          go to state 40


state 26

   60 sql_unary_expression: '+' . sql_primary_expression

    NULL_             shift, and go to state 16
    IDENTIFIER        shift, and go to state 17
    BOOLEAN_LITERAL   shift, and go to state 18
    INTEGER_LITERAL   shift, and go to state 19
    DECIMAL_LITERAL   shift, and go to state 20
    DATETIME_LITERAL  shift, and go to state 21
    TEXT_LITERAL      shift, and go to state 22
    BINARY_LITERAL    shift, and go to state 23
    '('               shift, and go to state 24

    sql_primary_expression  go to state 52
    sql_literal             go to state 39
    sql_identifier          go to state 40


state 27

   11 sql_select_expression_list_or_star: '*' .

    $default  reduce using rule 11 (sql_select_expression_list_or_star)


state 28

   10 sql_command: SELECT sql_select_expression_list_or_star . FROM IDENTIFIER sql_where_clause_opt

    FROM  shift, and go to state 53


state 29

    9 sql_command: SELECT sql_select_expression_list .
   12 sql_select_expression_list_or_star: sql_select_expression_list .
   14 sql_select_expression_list: sql_select_expression_list . ',' sql_select_expression

    ','  shift, and go to state 54

    FROM      reduce using rule 12 (sql_select_expression_list_or_star)
    $default  reduce using rule 9 (sql_command)


state 30

   13 sql_select_expression_list: sql_select_expression .

    $default  reduce using rule 13 (sql_select_expression_list)


state 31

   15 sql_select_expression: sql_expression .
   16                      | sql_expression . AS IDENTIFIER
   17                      | sql_expression . AS NAME

    AS  shift, and go to state 55

    $default  reduce using rule 15 (sql_select_expression)


state 32

   39 sql_expression: sql_or_expression .
   41 sql_or_expression: sql_or_expression . OR sql_and_expression

    OR  shift, and go to state 56

    $default  reduce using rule 39 (sql_expression)


state 33

   40 sql_or_expression: sql_and_expression .

    $default  reduce using rule 40 (sql_or_expression)


state 34

   42 sql_and_expression: sql_relational_expression .
   43                   | sql_relational_expression . AND sql_relational_expression
   45 sql_relational_expression: sql_relational_expression . '=' sql_add_expression
   46                          | sql_relational_expression . NE sql_add_expression
   47                          | sql_relational_expression . '<' sql_add_expression
   48                          | sql_relational_expression . LE sql_add_expression
   49                          | sql_relational_expression . '>' sql_add_expression
   50                          | sql_relational_expression . GE sql_add_expression
   51                          | sql_relational_expression . IS NULL_
   52                          | sql_relational_expression . IS NOT NULL_

    AND  shift, and go to state 57
    IS   shift, and go to state 58
    NE   shift, and go to state 59
    LE   shift, and go to state 60
    GE   shift, and go to state 61
    '='  shift, and go to state 62
    '<'  shift, and go to state 63
    '>'  shift, and go to state 64

    $default  reduce using rule 42 (sql_and_expression)


state 35

   44 sql_relational_expression: sql_add_expression .
   54 sql_add_expression: sql_add_expression . '+' sql_mult_expression
   55                   | sql_add_expression . '-' sql_mult_expression

    '-'  shift, and go to state 65
    '+'  shift, and go to state 66

    $default  reduce using rule 44 (sql_relational_expression)


state 36

   53 sql_add_expression: sql_mult_expression .
   57 sql_mult_expression: sql_mult_expression . '*' sql_unary_expression
   58                    | sql_mult_expression . '/' sql_unary_expression

    '*'  shift, and go to state 67
    '/'  shift, and go to state 68

    $default  reduce using rule 53 (sql_add_expression)


state 37

   56 sql_mult_expression: sql_unary_expression .

    $default  reduce using rule 56 (sql_mult_expression)


state 38

   59 sql_unary_expression: sql_primary_expression .

    $default  reduce using rule 59 (sql_unary_expression)


state 39

   63 sql_primary_expression: sql_literal .

    $default  reduce using rule 63 (sql_primary_expression)


state 40

   64 sql_primary_expression: sql_identifier .

    $default  reduce using rule 64 (sql_primary_expression)


state 41

    0 $accept: tucansql $end .

    $default  accept


state 42

    3 sql_commands: sql_commands ';' . sql_command

    CREATE   shift, and go to state 1
    DROP     shift, and go to state 2
    DELETE_  shift, and go to state 3
    INSERT   shift, and go to state 4
    UPDATE   shift, and go to state 5
    SELECT   shift, and go to state 6

    sql_command  go to state 69


state 43

    4 sql_command: CREATE TABLE IDENTIFIER . '(' sql_column_definition_list ')'

    '('  shift, and go to state 70


state 44

    7 sql_command: DROP TABLE IDENTIFIER .

    $default  reduce using rule 7 (sql_command)


state 45

    8 sql_command: DELETE_ FROM IDENTIFIER . sql_where_clause_opt

    WHERE  shift, and go to state 71

    $default  reduce using rule 34 (sql_where_clause_opt)

    sql_where_clause_opt  go to state 72
    sql_where_clause      go to state 73


state 46

    5 sql_command: INSERT INTO IDENTIFIER . sql_insert_column_name_list_opt VALUES '(' sql_expression_list ')'

    '('  shift, and go to state 74

    $default  reduce using rule 27 (sql_insert_column_name_list_opt)

    sql_insert_column_name_list_opt  go to state 75


state 47

    6 sql_command: UPDATE IDENTIFIER SET . sql_column_assign_list sql_where_clause_opt

    IDENTIFIER  shift, and go to state 76

    sql_column_assign_list  go to state 77
    sql_column_assign       go to state 78


state 48

   62 sql_unary_expression: NOT sql_primary_expression .

    $default  reduce using rule 62 (sql_unary_expression)


state 49

   74 sql_identifier: IDENTIFIER '.' . IDENTIFIER

    IDENTIFIER  shift, and go to state 79


state 50

   65 sql_primary_expression: '(' sql_expression . ')'

    ')'  shift, and go to state 80


state 51

   61 sql_unary_expression: '-' sql_primary_expression .

    $default  reduce using rule 61 (sql_unary_expression)


state 52

   60 sql_unary_expression: '+' sql_primary_expression .

    $default  reduce using rule 60 (sql_unary_expression)


state 53

   10 sql_command: SELECT sql_select_expression_list_or_star FROM . IDENTIFIER sql_where_clause_opt

    IDENTIFIER  shift, and go to state 81


state 54

   14 sql_select_expression_list: sql_select_expression_list ',' . sql_select_expression

    NOT               shift, and go to state 15
    NULL_             shift, and go to state 16
    IDENTIFIER        shift, and go to state 17
    BOOLEAN_LITERAL   shift, and go to state 18
    INTEGER_LITERAL   shift, and go to state 19
    DECIMAL_LITERAL   shift, and go to state 20
    DATETIME_LITERAL  shift, and go to state 21
    TEXT_LITERAL      shift, and go to state 22
    BINARY_LITERAL    shift, and go to state 23
    '('               shift, and go to state 24
    '-'               shift, and go to state 25
    '+'               shift, and go to state 26

    sql_select_expression      go to state 82
    sql_expression             go to state 31
    sql_or_expression          go to state 32
    sql_and_expression         go to state 33
    sql_relational_expression  go to state 34
    sql_add_expression         go to state 35
    sql_mult_expression        go to state 36
    sql_unary_expression       go to state 37
    sql_primary_expression     go to state 38
    sql_literal                go to state 39
    sql_identifier             go to state 40


state 55

   16 sql_select_expression: sql_expression AS . IDENTIFIER
   17                      | sql_expression AS . NAME

    IDENTIFIER  shift, and go to state 83
    NAME        shift, and go to state 84


state 56

   41 sql_or_expression: sql_or_expression OR . sql_and_expression

    NOT               shift, and go to state 15
    NULL_             shift, and go to state 16
    IDENTIFIER        shift, and go to state 17
    BOOLEAN_LITERAL   shift, and go to state 18
    INTEGER_LITERAL   shift, and go to state 19
    DECIMAL_LITERAL   shift, and go to state 20
    DATETIME_LITERAL  shift, and go to state 21
    TEXT_LITERAL      shift, and go to state 22
    BINARY_LITERAL    shift, and go to state 23
    '('               shift, and go to state 24
    '-'               shift, and go to state 25
    '+'               shift, and go to state 26

    sql_and_expression         go to state 85
    sql_relational_expression  go to state 34
    sql_add_expression         go to state 35
    sql_mult_expression        go to state 36
    sql_unary_expression       go to state 37
    sql_primary_expression     go to state 38
    sql_literal                go to state 39
    sql_identifier             go to state 40


state 57

   43 sql_and_expression: sql_relational_expression AND . sql_relational_expression

    NOT               shift, and go to state 15
    NULL_             shift, and go to state 16
    IDENTIFIER        shift, and go to state 17
    BOOLEAN_LITERAL   shift, and go to state 18
    INTEGER_LITERAL   shift, and go to state 19
    DECIMAL_LITERAL   shift, and go to state 20
    DATETIME_LITERAL  shift, and go to state 21
    TEXT_LITERAL      shift, and go to state 22
    BINARY_LITERAL    shift, and go to state 23
    '('               shift, and go to state 24
    '-'               shift, and go to state 25
    '+'               shift, and go to state 26

    sql_relational_expression  go to state 86
    sql_add_expression         go to state 35
    sql_mult_expression        go to state 36
    sql_unary_expression       go to state 37
    sql_primary_expression     go to state 38
    sql_literal                go to state 39
    sql_identifier             go to state 40


state 58

   51 sql_relational_expression: sql_relational_expression IS . NULL_
   52                          | sql_relational_expression IS . NOT NULL_

    NOT    shift, and go to state 87
    NULL_  shift, and go to state 88


state 59

   46 sql_relational_expression: sql_relational_expression NE . sql_add_expression

    NOT               shift, and go to state 15
    NULL_             shift, and go to state 16
    IDENTIFIER        shift, and go to state 17
    BOOLEAN_LITERAL   shift, and go to state 18
    INTEGER_LITERAL   shift, and go to state 19
    DECIMAL_LITERAL   shift, and go to state 20
    DATETIME_LITERAL  shift, and go to state 21
    TEXT_LITERAL      shift, and go to state 22
    BINARY_LITERAL    shift, and go to state 23
    '('               shift, and go to state 24
    '-'               shift, and go to state 25
    '+'               shift, and go to state 26

    sql_add_expression      go to state 89
    sql_mult_expression     go to state 36
    sql_unary_expression    go to state 37
    sql_primary_expression  go to state 38
    sql_literal             go to state 39
    sql_identifier          go to state 40


state 60

   48 sql_relational_expression: sql_relational_expression LE . sql_add_expression

    NOT               shift, and go to state 15
    NULL_             shift, and go to state 16
    IDENTIFIER        shift, and go to state 17
    BOOLEAN_LITERAL   shift, and go to state 18
    INTEGER_LITERAL   shift, and go to state 19
    DECIMAL_LITERAL   shift, and go to state 20
    DATETIME_LITERAL  shift, and go to state 21
    TEXT_LITERAL      shift, and go to state 22
    BINARY_LITERAL    shift, and go to state 23
    '('               shift, and go to state 24
    '-'               shift, and go to state 25
    '+'               shift, and go to state 26

    sql_add_expression      go to state 90
    sql_mult_expression     go to state 36
    sql_unary_expression    go to state 37
    sql_primary_expression  go to state 38
    sql_literal             go to state 39
    sql_identifier          go to state 40


state 61

   50 sql_relational_expression: sql_relational_expression GE . sql_add_expression

    NOT               shift, and go to state 15
    NULL_             shift, and go to state 16
    IDENTIFIER        shift, and go to state 17
    BOOLEAN_LITERAL   shift, and go to state 18
    INTEGER_LITERAL   shift, and go to state 19
    DECIMAL_LITERAL   shift, and go to state 20
    DATETIME_LITERAL  shift, and go to state 21
    TEXT_LITERAL      shift, and go to state 22
    BINARY_LITERAL    shift, and go to state 23
    '('               shift, and go to state 24
    '-'               shift, and go to state 25
    '+'               shift, and go to state 26

    sql_add_expression      go to state 91
    sql_mult_expression     go to state 36
    sql_unary_expression    go to state 37
    sql_primary_expression  go to state 38
    sql_literal             go to state 39
    sql_identifier          go to state 40


state 62

   45 sql_relational_expression: sql_relational_expression '=' . sql_add_expression

    NOT               shift, and go to state 15
    NULL_             shift, and go to state 16
    IDENTIFIER        shift, and go to state 17
    BOOLEAN_LITERAL   shift, and go to state 18
    INTEGER_LITERAL   shift, and go to state 19
    DECIMAL_LITERAL   shift, and go to state 20
    DATETIME_LITERAL  shift, and go to state 21
    TEXT_LITERAL      shift, and go to state 22
    BINARY_LITERAL    shift, and go to state 23
    '('               shift, and go to state 24
    '-'               shift, and go to state 25
    '+'               shift, and go to state 26

    sql_add_expression      go to state 92
    sql_mult_expression     go to state 36
    sql_unary_expression    go to state 37
    sql_primary_expression  go to state 38
    sql_literal             go to state 39
    sql_identifier          go to state 40


state 63

   47 sql_relational_expression: sql_relational_expression '<' . sql_add_expression

    NOT               shift, and go to state 15
    NULL_             shift, and go to state 16
    IDENTIFIER        shift, and go to state 17
    BOOLEAN_LITERAL   shift, and go to state 18
    INTEGER_LITERAL   shift, and go to state 19
    DECIMAL_LITERAL   shift, and go to state 20
    DATETIME_LITERAL  shift, and go to state 21
    TEXT_LITERAL      shift, and go to state 22
    BINARY_LITERAL    shift, and go to state 23
    '('               shift, and go to state 24
    '-'               shift, and go to state 25
    '+'               shift, and go to state 26

    sql_add_expression      go to state 93
    sql_mult_expression     go to state 36
    sql_unary_expression    go to state 37
    sql_primary_expression  go to state 38
    sql_literal             go to state 39
    sql_identifier          go to state 40


state 64

   49 sql_relational_expression: sql_relational_expression '>' . sql_add_expression

    NOT               shift, and go to state 15
    NULL_             shift, and go to state 16
    IDENTIFIER        shift, and go to state 17
    BOOLEAN_LITERAL   shift, and go to state 18
    INTEGER_LITERAL   shift, and go to state 19
    DECIMAL_LITERAL   shift, and go to state 20
    DATETIME_LITERAL  shift, and go to state 21
    TEXT_LITERAL      shift, and go to state 22
    BINARY_LITERAL    shift, and go to state 23
    '('               shift, and go to state 24
    '-'               shift, and go to state 25
    '+'               shift, and go to state 26

    sql_add_expression      go to state 94
    sql_mult_expression     go to state 36
    sql_unary_expression    go to state 37
    sql_primary_expression  go to state 38
    sql_literal             go to state 39
    sql_identifier          go to state 40


state 65

   55 sql_add_expression: sql_add_expression '-' . sql_mult_expression

    NOT               shift, and go to state 15
    NULL_             shift, and go to state 16
    IDENTIFIER        shift, and go to state 17
    BOOLEAN_LITERAL   shift, and go to state 18
    INTEGER_LITERAL   shift, and go to state 19
    DECIMAL_LITERAL   shift, and go to state 20
    DATETIME_LITERAL  shift, and go to state 21
    TEXT_LITERAL      shift, and go to state 22
    BINARY_LITERAL    shift, and go to state 23
    '('               shift, and go to state 24
    '-'               shift, and go to state 25
    '+'               shift, and go to state 26

    sql_mult_expression     go to state 95
    sql_unary_expression    go to state 37
    sql_primary_expression  go to state 38
    sql_literal             go to state 39
    sql_identifier          go to state 40


state 66

   54 sql_add_expression: sql_add_expression '+' . sql_mult_expression

    NOT               shift, and go to state 15
    NULL_             shift, and go to state 16
    IDENTIFIER        shift, and go to state 17
    BOOLEAN_LITERAL   shift, and go to state 18
    INTEGER_LITERAL   shift, and go to state 19
    DECIMAL_LITERAL   shift, and go to state 20
    DATETIME_LITERAL  shift, and go to state 21
    TEXT_LITERAL      shift, and go to state 22
    BINARY_LITERAL    shift, and go to state 23
    '('               shift, and go to state 24
    '-'               shift, and go to state 25
    '+'               shift, and go to state 26

    sql_mult_expression     go to state 96
    sql_unary_expression    go to state 37
    sql_primary_expression  go to state 38
    sql_literal             go to state 39
    sql_identifier          go to state 40


state 67

   57 sql_mult_expression: sql_mult_expression '*' . sql_unary_expression

    NOT               shift, and go to state 15
    NULL_             shift, and go to state 16
    IDENTIFIER        shift, and go to state 17
    BOOLEAN_LITERAL   shift, and go to state 18
    INTEGER_LITERAL   shift, and go to state 19
    DECIMAL_LITERAL   shift, and go to state 20
    DATETIME_LITERAL  shift, and go to state 21
    TEXT_LITERAL      shift, and go to state 22
    BINARY_LITERAL    shift, and go to state 23
    '('               shift, and go to state 24
    '-'               shift, and go to state 25
    '+'               shift, and go to state 26

    sql_unary_expression    go to state 97
    sql_primary_expression  go to state 38
    sql_literal             go to state 39
    sql_identifier          go to state 40


state 68

   58 sql_mult_expression: sql_mult_expression '/' . sql_unary_expression

    NOT               shift, and go to state 15
    NULL_             shift, and go to state 16
    IDENTIFIER        shift, and go to state 17
    BOOLEAN_LITERAL   shift, and go to state 18
    INTEGER_LITERAL   shift, and go to state 19
    DECIMAL_LITERAL   shift, and go to state 20
    DATETIME_LITERAL  shift, and go to state 21
    TEXT_LITERAL      shift, and go to state 22
    BINARY_LITERAL    shift, and go to state 23
    '('               shift, and go to state 24
    '-'               shift, and go to state 25
    '+'               shift, and go to state 26

    sql_unary_expression    go to state 98
    sql_primary_expression  go to state 38
    sql_literal             go to state 39
    sql_identifier          go to state 40


state 69

    3 sql_commands: sql_commands ';' sql_command .

    $default  reduce using rule 3 (sql_commands)


state 70

    4 sql_command: CREATE TABLE IDENTIFIER '(' . sql_column_definition_list ')'

    IDENTIFIER  shift, and go to state 99

    sql_column_definition_list  go to state 100
    sql_column_definition       go to state 101


state 71

   36 sql_where_clause: WHERE . sql_expression

    NOT               shift, and go to state 15
    NULL_             shift, and go to state 16
    IDENTIFIER        shift, and go to state 17
    BOOLEAN_LITERAL   shift, and go to state 18
    INTEGER_LITERAL   shift, and go to state 19
    DECIMAL_LITERAL   shift, and go to state 20
    DATETIME_LITERAL  shift, and go to state 21
    TEXT_LITERAL      shift, and go to state 22
    BINARY_LITERAL    shift, and go to state 23
    '('               shift, and go to state 24
    '-'               shift, and go to state 25
    '+'               shift, and go to state 26

    sql_expression             go to state 102
    sql_or_expression          go to state 32
    sql_and_expression         go to state 33
    sql_relational_expression  go to state 34
    sql_add_expression         go to state 35
    sql_mult_expression        go to state 36
    sql_unary_expression       go to state 37
    sql_primary_expression     go to state 38
    sql_literal                go to state 39
    sql_identifier             go to state 40


state 72

    8 sql_command: DELETE_ FROM IDENTIFIER sql_where_clause_opt .

    $default  reduce using rule 8 (sql_command)


state 73

   35 sql_where_clause_opt: sql_where_clause .

    $default  reduce using rule 35 (sql_where_clause_opt)


state 74

   28 sql_insert_column_name_list_opt: '(' . sql_column_name_list ')'

    IDENTIFIER  shift, and go to state 103

    sql_column_name_list  go to state 104


state 75

    5 sql_command: INSERT INTO IDENTIFIER sql_insert_column_name_list_opt . VALUES '(' sql_expression_list ')'

    VALUES  shift, and go to state 105


state 76

   33 sql_column_assign: IDENTIFIER . '=' sql_expression

    '='  shift, and go to state 106


state 77

    6 sql_command: UPDATE IDENTIFIER SET sql_column_assign_list . sql_where_clause_opt
   32 sql_column_assign_list: sql_column_assign_list . ',' sql_column_assign

    WHERE  shift, and go to state 71
    ','    shift, and go to state 107

    $default  reduce using rule 34 (sql_where_clause_opt)

    sql_where_clause_opt  go to state 108
    sql_where_clause      go to state 73


state 78

   31 sql_column_assign_list: sql_column_assign .

    $default  reduce using rule 31 (sql_column_assign_list)


state 79

   74 sql_identifier: IDENTIFIER '.' IDENTIFIER .

    $default  reduce using rule 74 (sql_identifier)


state 80

   65 sql_primary_expression: '(' sql_expression ')' .

    $default  reduce using rule 65 (sql_primary_expression)


state 81

   10 sql_command: SELECT sql_select_expression_list_or_star FROM IDENTIFIER . sql_where_clause_opt

    WHERE  shift, and go to state 71

    $default  reduce using rule 34 (sql_where_clause_opt)

    sql_where_clause_opt  go to state 109
    sql_where_clause      go to state 73


state 82

   14 sql_select_expression_list: sql_select_expression_list ',' sql_select_expression .

    $default  reduce using rule 14 (sql_select_expression_list)


state 83

   16 sql_select_expression: sql_expression AS IDENTIFIER .

    $default  reduce using rule 16 (sql_select_expression)


state 84
